--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Sample Project</title>
+    <title>A.D.D Shopping List</title>
   </head>
   <body>
     <div id="root"></div>
